<resources>
    <string name="app_name">Aura Music</string>
    <string name="debug_monitor_app_name">Aura Monitor</string>
    <string name="notification_channel_name">Reproducción Multimedia</string>
    <string name="notification_channel_desc">Controles del reproductor de música en barra de notificaciones y pantalla de bloqueo</string>
    <string name="widget_player_label">Aura Music • Reproductor Adaptativo</string>
    <string name="widget_library_label">Aura Music • Top 4 &amp; Playlists</string>
    <string name="widget_description">Reproductor adaptativo con color dinámico de la imagen, reanudación en 2do plano, barra de progreso y Bit-Perfect C++20</string>
    <string name="widget_library_description">Cuadrícula interactiva con tus 4 canciones más escuchadas o tus 4 playlists principales y color dinámico</string>
    <string name="widget_album_art_desc">Carátula de la canción en reproducción</string>
    <string name="widget_default_badge">AURA DSP C++20</string>
    <string name="widget_default_title">Aura Music</string>
    <string name="widget_default_artist">Toca Play para reanudar tu música</string>
    <string name="widget_prev_desc">Canción anterior</string>
    <string name="widget_play_pause_desc">Reproducir o pausar</string>
    <string name="widget_next_desc">Siguiente canción</string>
    <string name="widget_fav_desc">Marcar o desmarcar favorito</string>
</resources>
